--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prashant</title>
 </head>
 <body>
-    <h1>hiiallgood</h1>
+    <h1 style="color: blue;">H!! we are new to the  programming</h1>
+    <h1 style="background-color:green">circle</h1>
+    <h1 style="background-color:red">triangle</h1>
+    <h1 style="background-color:pink">reactangle</h1>
+    <h1 style="background-color:purple">oval</h1>
 </body>
 </html>
