--- a/day-5_Apr6/index.html
+++ b/day-5_Apr6/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>apr6</title>
-        <script src="./index.js"></script>
+        <script src="./index.js" defer></script>
     </head>
     <body>
-        <h1>Connected</h1>
+        <h1 id="h1tag">Connected</h1>
     </body>
 </html>
