--- a/day-6_Apr7/index.html
+++ b/day-6_Apr7/index.html
@@ -22,5 +22,10 @@
     <h3 id="same-id">All same</h3>
     <h3 id="same-id">All same</h3>
     
+    <h1 id="newH1">
+        <p class="h1kptags">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et explicabo odit earum numquam eos in ducimus culpa, commodi perferendis corporis.</p>
+        <p class="h1kptags">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et explicabo odit earum numquam eos in ducimus culpa, commodi perferendis corporis.</p>
+        <p class="h1kptags">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et explicabo odit earum numquam eos in ducimus culpa, commodi perferendis corporis.</p>
+        <p class="h1kptags">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et explicabo odit earum numquam eos in ducimus culpa, commodi perferendis corporis.</p></h1>
 </body>
 </html>
