--- a/day-7_Apr8/index.html
+++ b/day-7_Apr8/index.html
@@ -10,5 +10,11 @@
 </head>
 <body>
 <h1 id="h1tag">Connected</h1>
+<h2 id="h2tag">now</h2>
+<h1 id="counter"></h1>
+<button id="btn" >Click me</button>
+<button id="add">Count up</button>
+<button id="sub">Count down</button>
+<!-- <button id="btn" onClick="allSet()">Click me</button> -->
 </body>
 </html>
