--- a/day-12_Apr16/index.html
+++ b/day-12_Apr16/index.html
@@ -12,7 +12,15 @@
     <div class="container">
         <h1 class="firstClass">Connected</h1>
     <!-- <h1>all good</h1> -->
-    <button id="btn">javascript</button>
+    <button id="btn" onclick="alterText()" style="background-color:green ;">javascript</button>
+
+    <input type="password" placeholder="enter the password" id="inputfeild"/>
+    <button id="btnShow">ShowPassword</button>
+    <button id="btnHide">HidePassword</button>
     </div>
+
+    <div id="imageTag" ></div>
+
+
 </body>
 </html>
