--- a/day-12_Apr16/index.html
+++ b/day-12_Apr16/index.html
@@ -9,17 +9,17 @@
     <script src="./index.js" defer></script>
 </head>
 <body>
-    <!-- <div class="container">
-        <h1 class="firstClass">Connected</h1>
+    <div class="container">
+        <!-- <h1 class="firstClass">Connected</h1>
     <h1>all good</h1>
-    <button id="btn" onclick="alterText()" style="background-color:green ;">javascript</button>
+    <button id="btn" onclick="alterText()" style="background-color:green ;">javascript</button> -->
 
     <input type="password" placeholder="enter the password" id="inputfeild"/>
     <button id="btnShow">ShowPassword</button>
     <button id="btnHide">HidePassword</button>
-    </div> -->
+    </div>
 
-    <div id="imageTag" ></div>
+    <!-- <div id="imageTag" ></div> -->
 
 
 </body>
