--- a/day-13_Apr17/3/index.html
+++ b/day-13_Apr17/3/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dom manuplation</title>
-    <script src="./index.js"></script>
+    <title>apr17</title>
+    <link rel="stylesheet" href="./index.css">
+
 </head>
+
 <body>
-    <h1 class="firstTag">Connected</h1>
+    <h1>Connected</h1>
+    <div class="div"></div>
+    <script src="./index.js"></script>
 </body>
+
 </html>
