--- a/day-17_Apr22/index.html
+++ b/day-17_Apr22/index.html
@@ -14,19 +14,21 @@
     <main class="mainContainer">
         <section class="innercontainer">
             <div class="headingDiv">
-            <h1 class="first-wala-tag">Overview</h1>
+            <h1 class="first-wala-tag">Our Reviews</h1>
+            <div class="underline"></div>
             </div>
             <div class="Card">
                 <div class="image">
-                    <img src="" alt="candidate image">
+                    <img id="imagetag" src="" alt="candidate image">
                 </div>
                 <div class="detailsCard">
                     <h3 class="name"></h3>
                     <h4 class="job"></h4>
-                    <p class="about"></p>
-                    <button id="previousBtn">pevious</button>
-                    <button id="nextBtn">next</button>
-                    <button class="showrandom">random</button>
+                    <p class="about">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere aspernatur dolorem nemo quod ullam nihil sint dolor iste repudiandae delectus.</p>
+                    <button id="previousBtn"><</button>
+                    <button id="nextBtn">></button>
+                    <br/>
+                    <button id="showrandom">Surprise Me</button>
                 </div>
 
             </div>
