--- a/day-22_Apr30/index.html
+++ b/day-22_Apr30/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css"/>
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js" ></script> -->
 </head>
 <body>
-    <h1>Connected</h1>
+    <h1 class="heading">To-Do</h1>
+    <div class="contaiiner">
+        <input class="inputBox" type="text" placeholder="Type to add....">
+        <button class="searchBtn">Search</button>
+    </div>
+    <div class="textarea"></div>
+    <script src="./index.js"></script>
 </body>
 </html>
