--- a/Project-day-23_May2/assests/index.html
+++ b/Project-day-23_May2/assests/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VizOcean | An video Streaming Platform</title>
+    <link rel="shortcut icon" href="./images/play.png" type="image/png">
     <!-- for online bootstrap cdn approch -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
@@ -20,12 +21,12 @@
     <!-- navigation bar -->
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand">
-                <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"
+            <a class="navbar-brand" href="./index.html">
+                <img src="./images/play.png" alt="" width="30px"  height="30px" 
                     class="d-inline-block align-text-top">
                 VizOcean</a>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex" action="./search.html">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q" id="searchInput">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
