--- a/Project-day-23_May2/assests/index.html
+++ b/Project-day-23_May2/assests/index.html
@@ -34,7 +34,7 @@
     <!-- main section shows suggestions -->
     <section class="mt-4">
         <div class="container">
-            <div id = "card-container"class="row row-cols-3">
+            <div id = "card-container"class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
                 
          </div>
         </div>
@@ -45,25 +45,25 @@
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
               <div class="col-md-4 d-flex align-items-center">
                 <a href="index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                  <img src="assets/images/logo.png" style="height: 2rem;" />
+                  <img src="./images/play.png" style="height: 2rem;" />
                 </a>
-                <span class="text-muted">© Aayush and Team</span>
+                <span class="text-muted">© ashish and teams</span>
               </div>
           
               <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                 <li class="ms-3">
-                  <a class="text-muted" href="https://github.com/aayusharyan" target="_blank">
-                    <img src="assets/images/github.png" style="height: 1rem;" />    
+                  <a class="text-muted" href="https://github.com" target="_blank">
+                    <img src="./images/github.png" style="height: 1rem;" />    
                   </a>
                 </li>
                 <li class="ms-3">
-                  <a class="text-muted" href="https://instagram.com/yush.dev" target="_blank">
-                    <img src="assets/images/instagram.png" style="height: 1rem;" />    
+                  <a class="text-muted" href="https://instagram.com" target="_blank">
+                    <img src="./images/instagram.png" style="height: 1rem;" />    
                   </a>
                 </li>
                 <li class="ms-3">
                   <a class="text-muted" href="https://www.twitter.com/" target="_blank">
-                    <img src="assets/images/twitter.png" style="height: 1rem;" />
+                    <img src="./images/twitter.png" style="height: 1rem;" />
                   </a>
                 </li>
               </ul>
