--- a/Project-day-23_May2/assests/details.html
+++ b/Project-day-23_May2/assests/details.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>details | VizOcean | An video Streaming Platform</title>
+    <link rel="stylesheet" href="./css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -15,7 +16,7 @@
 
 <body>
     
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-dark navPosition">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">
                 <img src="./images/play.png" alt="" width="30px"  height="30px" 
@@ -29,9 +30,9 @@
     </nav>
     
     <section class="mt-4 px-4">
-        <div class="container">
+        <div class="container" >
             <div class="row">
-                <div class="col" id="player_iframe">
+                <div class="col" id="player_iframe" style="display: flex; justify-content:center;" >
                     <!-- <iframe width="560" height="315"  id="player_iframe"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
