--- a/Project-day-23_May2/assests/search.html
+++ b/Project-day-23_May2/assests/search.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search | VizOcean | An video Streaming Platform</title>
+    <link rel="stylesheet" href="./css/index.css"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark">
+  <nav class="navPosition navbar navbar-dark bg-dark " style="position: sticky;"> 
     <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">
             <img src="./images/play.png" alt="" width="30px"  height="30px" 
