--- a/edrukaRevision/2expressions&operators/index.html
+++ b/edrukaRevision/2expressions&operators/index.html
@@ -8,6 +8,6 @@
     <script src="./index.js" defer></script>
 </head>
 <body>
-    <h1>Connected</h1>
+    <h1 id="f1">Connected</h1>
 </body>
 </html>
