--- a/day-1_Apr1/t-2/index.html
+++ b/day-1_Apr1/t-2/index.html
@@ -16,7 +16,7 @@
           b.src="off.jpg";
         }
         function sty(){
-            document.getElementById("tagline").style.color="red";
+            document.getElementById("tagline").style.color="pink";
         }
     </script>
 </head>
